--- a/style/desktop/desktop.css
+++ b/style/desktop/desktop.css
@@ -21,7 +21,7 @@
     display: flex;
     align-items: start;
     margin: 0 auto;
-    font-family: Geneva, Arial, Helvetica, sans-serif;
+    /* font-family: Geneva, Arial, Helvetica, sans-serif; */
 }
 
 .container {
@@ -49,7 +49,7 @@ body {}
 
 .title {
     position: relative;
-    font-family: Geneva, Arial, Helvetica, sans-serif;
+    /* font-family: Geneva, Arial, Helvetica, sans-serif; */
     font-size: 1.38vw;
     font-weight: 700;
     color: #3223BE;
