--- a/style/desktop/desktop_thanks.css
+++ b/style/desktop/desktop_thanks.css
@@ -4,7 +4,7 @@
     position: fixed;
     left: 10%;
     z-index: 25;
-    font-family: Geneva, Arial, Helvetica, sans-serif;
+    /* font-family: Geneva, Arial, Helvetica, sans-serif; */
     background-color: white;
     box-shadow: 1vw 1vw 1vw gray;
     display: none;
