fix: mobile adaptive

--- a/style/desktop/desktop_trailers.css
+++ b/style/desktop/desktop_trailers.css
@@ -1,8 +1,9 @@
 .trailers {
     width: 78vw;
-    height: 24vw;
+    height: auto;
     display: flex;
     margin-top: 7.8vw;
+    padding-bottom: 2vw;
     border: 1px solid #DEDEDE;
     background-repeat: no-repeat;
     background-image: url(../../assets/desktop/treiler.png);
