--- a/style/mobile/mobile_contact.css
+++ b/style/mobile/mobile_contact.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 10vw;
+    
 }
 
 .contact__title {
@@ -40,9 +41,10 @@
 .contact__links {
     display: flex;
     flex-direction: column;
-    margin-bottom: 3vw;
+    margin-bottom: 7vw;
     gap: 5vw;
     width: 100%;
+    /* background-color: yellowgreen; */
 }
 
 .contact__item {
@@ -50,12 +52,22 @@
     display: flex;
     flex-direction: row;
     gap: 3vw;
+    /* background-color: yellow; */
+}
+.contact__item_pic{
+    width: 5.5vw;
+    height: 7vw;
+    /* background-color: aqua; */
+}
+.contact__item_pic img{
+    width: 100%;
+    height: auto;
 }
 
-.contact__item img {
+/* .contact__item img {
     width: 7%;
     height: 3%;
-}
+} */
 
 .contact__item_wrapper {
     display: flex;
@@ -77,16 +89,25 @@
     font-weight: 300;
 }
 
-.contact__item_text {
-    width: 100%;
+/* .contact__item_tex span:first-child {
+    width: 60%;
     margin-left: 1vw;
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 900;
+    background-color: yellowgreen;
+} */
+.contact__item_text {
+    /* width: 90%; */
+    margin-left: 1vw;
+    font-size: 4vw;
+    font-weight: 900;
+    /* background-color: yellowgreen; */
 }
 
 .contact__map {
     width: 100%;
     height: auto;
+    background-image: url("../../assets/desktop/map.png");
 }
 
 .contact__map img {
