--- a/style/mobile/mobile_help.css
+++ b/style/mobile/mobile_help.css
@@ -11,6 +11,7 @@
     background-image: url(../../assets/desktop/help.png);
     background-size: 100% auto;
     background-position: bottom;
+    /* background-color: yellowgreen; */
 }
 
 
