--- a/style/desktop/desktop_contact.css
+++ b/style/desktop/desktop_contact.css
@@ -72,7 +72,7 @@
     /* font-size: 16px;
     line-height: 1.2; */
     /* font-weight: 500; */
-    color: red;
+   /*  color: red; */
 }
 .contact__item_pic{
     width: 1.25vw;
