--- a/style/mobile/mobile_delivery.css
+++ b/style/mobile/mobile_delivery.css
@@ -1,10 +1,12 @@
 .delivery {
     width: 100%;
-    height: 247vw;
+    /* height: 270vw; */
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 15vw;
+    /* background-color: yellowgreen; */
 }
 
 .delivery__content {
@@ -47,7 +49,7 @@
 }
 
 .delivery__img img {
-    width: 100%;
+    width: 90%;
     height: auto;
 }
 
@@ -60,7 +62,7 @@
     align-items: start;
     padding: 3vw;
     margin-top: 4.8vw;
-    gap: 2vw;
+    gap: 1.5vw;
     border: 1px solid #DEDEDE;
 }
 
@@ -79,10 +81,11 @@
 .delivery__form_item {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 85vw;
     gap: 1.5vw;
     height: auto;
     margin-top: 2vw;
+    /* background-color: yellow; */
 }
 
 .delivery__form_element {
