--- a/style/desktop/desktop_header.css
+++ b/style/desktop/desktop_header.css
@@ -34,6 +34,7 @@
 }
 
 .header__nav {
+    font-family: Geneva, Arial, Helvetica, sans-serif;
     font-size: 0.9vw;
 }
 
@@ -105,6 +106,7 @@
     align-items: center;
     justify-content: space-between;
     align-items: center;
+    font-family: Geneva, Arial, Helvetica, sans-serif;
     font-size: 1vw;
     font-weight: 300;
 }
