--- a/style/mobile/mobile_delivery.css
+++ b/style/mobile/mobile_delivery.css
@@ -1,12 +1,10 @@
 .delivery {
     width: 100%;
-    /* height: 270vw; */
-    height: auto;
+    height: 247vw;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 15vw;
-    /* background-color: yellowgreen; */
 }
 
 .delivery__content {
@@ -49,7 +47,7 @@
 }
 
 .delivery__img img {
-    width: 90%;
+    width: 100%;
     height: auto;
 }
 
@@ -62,7 +60,7 @@
     align-items: start;
     padding: 3vw;
     margin-top: 4.8vw;
-    gap: 1.5vw;
+    gap: 2vw;
     border: 1px solid #DEDEDE;
 }
 
@@ -81,11 +79,10 @@
 .delivery__form_item {
     display: flex;
     flex-direction: column;
-    width: 85vw;
+    width: 100%;
     gap: 1.5vw;
     height: auto;
     margin-top: 2vw;
-    /* background-color: yellow; */
 }
 
 .delivery__form_element {
