--- a/style/desktop/desktop_banner-parts.css
+++ b/style/desktop/desktop_banner-parts.css
@@ -14,7 +14,7 @@
     background-repeat: no-repeat;
     background-size: 45% 100%;
     background-position: right;
-} /* background: linear-gradient(to right, #FFFFFF 10%, rgba(250, 0, 0, 0) 50%), */
+} 
 
 .banner-parts__container {
     width: 35vw;
