--- a/style/mobile/mobile_contact.css
+++ b/style/mobile/mobile_contact.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 10vw;
-    
 }
 
 .contact__title {
@@ -41,10 +40,9 @@
 .contact__links {
     display: flex;
     flex-direction: column;
-    margin-bottom: 7vw;
+    margin-bottom: 3vw;
     gap: 5vw;
     width: 100%;
-    /* background-color: yellowgreen; */
 }
 
 .contact__item {
@@ -52,22 +50,12 @@
     display: flex;
     flex-direction: row;
     gap: 3vw;
-    /* background-color: yellow; */
-}
-.contact__item_pic{
-    width: 5.5vw;
-    height: 7vw;
-    /* background-color: aqua; */
-}
-.contact__item_pic img{
-    width: 100%;
-    height: auto;
 }
 
-/* .contact__item img {
+.contact__item img {
     width: 7%;
     height: 3%;
-} */
+}
 
 .contact__item_wrapper {
     display: flex;
@@ -89,25 +77,16 @@
     font-weight: 300;
 }
 
-/* .contact__item_tex span:first-child {
-    width: 60%;
-    margin-left: 1vw;
-    font-size: 4vw;
-    font-weight: 900;
-    background-color: yellowgreen;
-} */
 .contact__item_text {
-    /* width: 90%; */
+    width: 100%;
     margin-left: 1vw;
-    font-size: 4vw;
+    font-size: 5vw;
     font-weight: 900;
-    /* background-color: yellowgreen; */
 }
 
 .contact__map {
     width: 100%;
     height: auto;
-    background-image: url("../../assets/desktop/map.png");
 }
 
 .contact__map img {
