--- a/style/mobile/mobile_intro.css
+++ b/style/mobile/mobile_intro.css
@@ -54,6 +54,6 @@
 .intro__button:hover,
 .intro__button:focus,
 .intro__button:active {
-    opacity: 0.5;
+    box-shadow: 0 0  0.8em rgba(0,0,0,0.5) ;
     cursor: pointer;
 }
