--- a/style/mobile/mobile_banner-parts.css
+++ b/style/mobile/mobile_banner-parts.css
@@ -1,6 +1,6 @@
 .banner-parts {
     width: 100%;
-    height: 150vw;
+    min-height: 150vw;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -8,6 +8,14 @@
     position: relative;
     margin-top: 32vw;
     border: 1px solid #DEDEDE;
+
+    background: linear-gradient(to bottom, #FFFFFF 10%, rgba(250, 0, 0, 0) 50%),
+    url(../../assets/desktop/banner-parts.png);
+   background-repeat: no-repeat;
+   background-size: 100% 35%;
+   background-position: bottom;
+
+     
 }
 
 .banner-parts__container {
