--- a/style/mobile/mobile_delivery.css
+++ b/style/mobile/mobile_delivery.css
@@ -1,11 +1,11 @@
 .delivery {
     width: 100%;
-    height: 247vw;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     margin-top: 15vw;
-}
+    }
 
 .delivery__content {
     width: 100%;
@@ -33,7 +33,7 @@
 }
 
 .delivery__text {
-    font-size: 4.85vw;
+    font-size: 4vw;
     color: #4A4A4A;
 }
 
@@ -86,7 +86,7 @@
 }
 
 .delivery__form_element {
-    width: 100%;
+    width: 80vw;
     height: 15vw;
     padding-left: 1vw;
     opacity: 0.7;
