--- a/style/mobile/mobile_pop-up.css
+++ b/style/mobile/mobile_pop-up.css
@@ -1,28 +1,33 @@
 .pop_up {
     width: 100%;
-    height: 95vw;
+    height: auto;
     position: fixed;
     display: absolute;
     z-index: 25;
     top: 5%;
     left: 0;
-    padding: 0 5vw;
+    padding: 2vw 5vw;
     background-color: white;
     display: none;
     box-shadow: 1vw 1vw 1vw gray;
+    
 }
 
 .pop_up__close {
-    width: 100%;
-    height: 5vw;
+    position: absolute;
+    right: 3vw;
+    width: 18vw;
+    height: 12vw;
+    /* margin-top: 3vw; */
     display: flex;
     align-items: center;
     justify-content: end;
+    /* background-color: yellowgreen; */
 }
 
 .pop_up__close span {
-    width: 3vw;
-    height: 0.2vw;
+    width: 8vw;
+    height: 0.5vw;
     background-color: #3223BE;
 }
 
@@ -39,15 +44,16 @@
 
 .pop_up_form {
     width: 100%;
-    height: 20vw;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    margin-top: 8vw;
+    }
 
 .pop_up_form__wrapper {
     width: 100%;
-    height: 20vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 2vw;
@@ -83,7 +89,7 @@
 
 .pop_up_form__element {
     width: 100%;
-    height: 7vw;
+    height: 10vw;
 }
 .pop_up_form__element::-webkit-input-placeholder {
     font-size: 3vw;
@@ -99,6 +105,36 @@
 .pop_up__file p{
     margin-left: 3vw;
 }
+
+.input-file {
+    position: relative;
+    width: fit-content;
+    padding: 3vw 2vw;
+    display: flex;
+    cursor: pointer;
+    outline: none;
+    text-decoration: none;
+    font-size: 5vw;
+    color: #3223BE;
+    background-color: white;
+    border: 1px solid #3223BE;
+}
+
+.pop_up_form__item input[type=file] {
+    position: absolute;
+    z-index: 3;
+    display: block;
+    width: 15vw;
+    margin-left: 2.5vw;
+    opacity: 0;
+    width: 32vw;
+    height: 12vw;
+    transform: scale(1.3);
+
+}
+
+
+
 .pop_up__file span {
     position: relative;
     width: fit-content;
