--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 @import url("./style/reset.css");
 @import url("./style/common.css");
 
-@import url("./style/desktop/desktop.css") (min-width: 321px);
+@import url("./style/desktop/desktop.css") (max-width: 1920px) and (min-width: 321px);
+/* @import url("./style/tablet/tablet.css") (max-width: 1079px) and (min-width: 321px); */
 @import url("./style/mobile/mobile.css")  (max-width: 320px);
-
-
-
-
-
-
