--- a/style/tablet/tablet_contact.css
+++ b/style/tablet/tablet_contact.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     position: relative;
     color: #3223BE;
-    font-size: 7vw;
+    font-size: 5vw;
     font-weight: 900;
     margin: 2vw 0;
 }
@@ -116,13 +116,13 @@
 .contact__item_text {
     width: 100%;
     margin-left: 1vw;
-    font-size: 5vw;
+    font-size: 3vw;
     font-weight: 900;
 }
 
 .contact__map {
     width: 100%;
-    height: auto;
+    height: 60vw;
 }
 
 .contact__map img {
