--- a/style/tablet/tablet_banner-parts.css
+++ b/style/tablet/tablet_banner-parts.css
@@ -1,14 +1,13 @@
 .banner-parts {
     width: 100%;
-    min-height: 150vw;
+    min-height: 140vw;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: start;
     position: relative;
-    margin-top: 32vw;
+    margin-top: 10vw;
     border: 1px solid #DEDEDE;
-
     background: linear-gradient(to bottom, #FFFFFF 10%, rgba(250, 0, 0, 0) 50%),
     url(../../assets/desktop/banner-parts.png);
    background-repeat: no-repeat;
@@ -32,7 +31,7 @@
     display: flex;
     flex-direction: column;
     margin: 3vw;
-    font-size: 7vw;
+    font-size: 5vw;
     font-weight: 700;
 }
 
@@ -41,7 +40,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     margin-top: 3vw;
-    gap: 2vw;
+    gap: 1vw;
 }
 
 .banner-parts__form_element {
@@ -49,6 +48,8 @@
     height: 15vw;
     padding-left: 1vw;
     opacity: 0.7;
+    border: 1px solid #808080;
+    font-size: 5vw;
 }
 
 .banner-parts__description {
