--- a/style/tablet/tablet_call.css
+++ b/style/tablet/tablet_call.css
@@ -9,6 +9,7 @@
     background-color: white;
     box-shadow: 1vw 1vw 1vw gray;
     display: none;
+    /* background-color: yellowgreen; */
 }
 
 .call__close {
@@ -92,10 +93,11 @@
     margin-bottom: 0.5vw;
     opacity: 0.7;
     padding-left: 1vw;
+    font-size: 5vw;
 }
 
 .call__form_element::-webkit-input-placeholder {
-    font-size: 0.8em;
+    font-size: 3vw;
     font-weight: 300;
 }
 
