--- a/style/tablet/tablet_header.css
+++ b/style/tablet/tablet_header.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     gap: 2vw;
     position: relative;
+    /* background-color: rgb(138, 223, 188); */
 }
 
 .header__logo-pic {
@@ -30,8 +31,10 @@
 }
 
 .header__nav {
-    font-family: Geneva, Arial, Helvetica, sans-serif;
-    font-size: 1vw;
+    
+    /* font-family: Geneva, Arial, Helvetica, sans-serif; */
+    /* font-size: 1vw; */
+    /* color: red; */
 }
 
 .header__list {
@@ -43,6 +46,8 @@
 
 .header__item a {
     color: black;
+    /* color: red; */
+    font-size: 5vw;
     text-decoration: none;
 }
 
@@ -97,7 +102,7 @@
     align-items: center;
     justify-content: space-between;
     align-items: center;
-    font-family: Geneva, Arial, Helvetica, sans-serif;
+   /*  font-family: Geneva, Arial, Helvetica, sans-serif; */
     font-size: 1vw;
     font-weight: 300;
 }
@@ -112,6 +117,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+   /*  background-color: yellowgreen; */
 }
 
 .header__menu_mobile_call {
@@ -136,27 +142,29 @@
 }
 
 .header__burger {
-    width: 8vw;
-    height: 5vw;
+    width: 10vw;
+    height: 8vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    /* background-color: rgb(114, 116, 112); */
 }
 
 .header__burger_line {
-    width: 8vw;
-    height: 35px;
+    width: 100%;
+    height: 6vw;
     position: relative;
     z-index: 2;
     overflow: hidden;
+   /*  background-color: violet; */
 }
 
 .header__burger_line span:nth-of-type(2) {
-    top: calc(50% - 7px);
+    top: calc(50% - 1.5vw);
 }
 
 .header__burger_line span:nth-of-type(3) {
-    top: calc(50% + 7px);
+    top: calc(50% + 1.5vw);
 }
 
 .header__burger_line.active span:nth-of-type(1) {
@@ -174,29 +182,32 @@
 }
 
 .header__burger_line span {
-    width: 30px;
-    height: 2px;
+    width: 8vw;
+    height: 0.4vw;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #3223BE;
     transition: all 0.5s;
+    /* background-color: rgb(185, 30, 56); */
 }
 
 .header__menu {
     position: absolute;
     width: 100%;
-    height: 150vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 8vw;
     top: 10vw;
     z-index: 15;
     padding: 15vw 8vw;
     background-color: white;
-    transform: translateX(-100%);
+    transform: translateX(-110%);
     transition: transform 1s;
+    /* background-color: yellowgreen; */
 }
 
 .header__menu.active {
@@ -208,15 +219,17 @@
     height: auto;
     font-size: 5vw;
     margin-left: 7.5vw;
+    /* background-color: yellowgreen; */
 }
 
 .header__list {
     display: flex;
     flex-direction: column;
-    gap: 6vw;
+    gap: 5vw;
     width: 100%;
     height: auto;
-    margin-top: 5vw;
+    /* margin-top: 5vw; */
+   /*  background-color: aqua; */
 }
 
 .header__list li {
@@ -233,6 +246,7 @@
     gap: 5vw;
     padding: 2vw 5vw;
     margin-bottom: 5vw;
+    /* background-color: yellowgreen; */
 }
 
 .header__call {
@@ -247,5 +261,6 @@
     display: flex;
     flex-direction: column;
     gap: 5vw;
-    font-size: 7vw;
+    font-size: 5vw;
+    
 }
