--- a/style/tablet/tablet_parts.css
+++ b/style/tablet/tablet_parts.css
@@ -9,7 +9,7 @@
 
 .parts__title {
     width: 70%;
-    font-size: 7vw;
+    font-size: 5vw;
     color: #3223BE;
     position: relative;
     margin-bottom: 3vw;
@@ -22,7 +22,7 @@
     content: "Поставляем любые запчасти для";
     color: #F4F4F4;
     position: absolute;
-    font-size: 6.5vw;
+    font-size: 5vw;
     font-weight: 900;
     top: 2.5vw;
     left: 2vw;
@@ -37,21 +37,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 8vw;
+    gap: 2vw;
     margin-top: 6vw;
 }
 
 .parts__item {
-    width: 100%;
-    height: 80vw;
+    width: 40%;
+    height: 35vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5vw;
+    gap: 2vw;
     padding: 5vw 0;
     border: 1px solid #DEDEDE;
     transition-duration: 0.5s;
+    /* background-color: yellowgreen; */
 }
 
 .parts__item:hover,
@@ -72,5 +73,5 @@
     align-items: center;
     justify-content: space-between;
     font-weight: 700;
-    font-size: 5vw;
+    font-size: 3vw;
 }
