--- a/style/tablet/tablet_pop-up.css
+++ b/style/tablet/tablet_pop-up.css
@@ -90,6 +90,9 @@
 .pop_up_form__element {
     width: 100%;
     height: 10vw;
+    font-size: 5vw;
+    padding-left: 1vw;
+    border: 1px solid #808080;
 }
 .pop_up_form__element::-webkit-input-placeholder {
     font-size: 3vw;
