--- a/style/tablet/tablet_price.css
+++ b/style/tablet/tablet_price.css
@@ -88,6 +88,8 @@
     margin-top: 1vw;
     opacity: 0.7;
     padding-left: 1vw;
+    font-size: 5vw;
+    border: 1px solid #808080;
 }
 
 .price__form_element::-webkit-input-placeholder {
