fix: thanks display none

--- a/style/tablet/tablet_thanks.css
+++ b/style/tablet/tablet_thanks.css
@@ -7,7 +7,7 @@
     top: 5%;
     left: 5%;
     background-color: white;
-    /* display: none; */
+    display: none;
     box-shadow: 1vw 1vw 1vw gray;
 }
 
